A nice approach to fix file encoding problems a bit more...

* loadMedia by default wants an encoded QBA now
* there also is an overload for QString which simply does toUtf8
* local files are now encoded to local 8-bit and along with remote urls percent encoded to QBA and passed to loadMedia

This *should* fix encoding problems proper now. It is however to be noted that Phonon 4.5's Mrl class will deal with these issues at better scale.

BUG: 266719